# ghostweight-triton

./: .gitignore  pyproject.toml
benchmarks/: bench_distilbert.py  bench_gpt2.py  bench_kernels.py
examples/: distilbert_inference.py  gpt2_inference.py  quickstart.py
ghostweight_triton/: __init__.py  module.py  replace.py
ghostweight_triton/kernels/: __init__.py  gather.py  mask.py  matmul.py
ghostweight_triton/utils/: __init__.py  compat.py  sparsity.py
tests/: conftest.py  test_end_to_end.py  test_gather.py  test_mask.py  test_matmul.py  test_module.py  test_replace.py
